# valyze

./: .flake8  Dockerfile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/models/: base_valuation_model.py  simple_valuation_model.py
app/tests/: test_valuation.py
