    [tool.poetry]
    name = "valyze-engine"
    version = "0.1.0"
    description = "AI-driven data valuation (Python FastAPI)"
    authors = ["Minkalla Technologies <info@minkalla.org>"]
    readme = "README.md"

    packages = [
        { include = "app", from = "." } # CRITICAL CHANGE: 'app' is included from the project root
    ]

    [tool.poetry.dependencies]
    python = ">=3.9,<3.12"
    fastapi = "^0.111.0"
    uvicorn = {extras = ["standard"], version = "^0.30.1"}
    pydantic = "^2.7.4"

    [tool.poetry.group.dev.dependencies]
    pytest = "^8.2.2"
    black = "^24.4.2"
    flake8 = "^7.1.0"
    isort = "^5.13.2"
    pytest-asyncio = "^0.23.6"

    [build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

    [tool.pytest.ini_options]
    pythonpath = ["app"] # Continue to point pytest to 'app' as the root for tests
    