# pyproject.toml

[tool.poetry]
name = "valyze-engine"
version = "0.1.0"
description = "AI-driven data valuation (Python FastAPI)"
authors = ["Minkalla Technologies <info@minkalla.org>"]
readme = "README.md"

packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
# For pytest-asyncio to work with uvicorn's server and async tests
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6" # Required for asynchronous testing with pytest

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["app"] # Point pytest to 'app' as the root for imports
log_cli_level = "INFO" # Show INFO logs during tests